fix: wrong color of axis title (in bar charts)

--- a/styles/bstats/catppuccin.user.css
+++ b/styles/bstats/catppuccin.user.css
@@ -656,6 +656,10 @@
 		.highcharts-label.highcharts-no-data tspan {
 			fill: @subtext1;
 		}
+		/* axis label */
+		.highcharts-axis-title tspan {
+			fill: @subtext1;
+		}
 
 		/* hover text background */
 		.highcharts-label-box,
